# fastapi-jwt

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: coverage.yaml  lint.yaml  test.yaml  unit-test.yaml  unit-tests-lint.yaml
controllers/: token.py  user.py
models/: user.py
routers/: users.py
schemas/: user.py
tests/: conftest.py  test_user.py
utils/: database.py
